<resources>
    <string name="app_name">CallForHelpDemu</string>
    <string name="FontTitle">Login</string>
    <string name="LoginUser">User Id:</string>
    <string name="LoginPassword">Password:</string>
    <string name="LoginWRITE">Forgotten Password?</string>
    <string name="SignInButton">Sign in</string>
    <string name="Message1">Do not have any account?</string>
    <string name="Message2">Register</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string-array name="bloodGrp_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="rate_array">
        <item>Excellent</item>
        <item>Good</item>
        <item>Average</item>
        <item>Below Average</item>
        <item>Poor</item>
    </string-array>
    <string name="title_activity_home1">Home1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home2">Home2</string>
    <string name="Hospital">Hospital</string>
</resources>
