<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-2dp"
    android:layout_marginLeft="-1dp"
    android:layout_marginRight="-1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/blank"
        tools:context=".MainActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/call"
            />

        <TextView
            android:id="@+id/Login"
            android:layout_marginTop="280dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Login"
            android:textColor="#6C93AB"
            android:textAlignment="center"
            android:fontFamily="@font/nuevastdbold"
            android:textSize="50sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginUser"
        android:textColor="#6C93AB"
        android:fontFamily="@font/nuevastdbold"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/USERNAMEEDIT"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/nuevastdbold"
        android:hint="ENTER NAME"
        android:backgroundTint="#000000"

        />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginPassword"
        android:textColor="#6C93AB"
        android:fontFamily="@font/nuevastdbold"
        android:textSize="30sp"
        android:textStyle="bold"
        />

        <EditText
            android:id="@+id/PasswordEdit"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:fontFamily="@font/nuevastdbold"
            android:textAlignment="center"
            android:textSize="20dp"
            android:hint="ENTER PASSWORD"
            android:backgroundTint="#000000"

            />

    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/Forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginWRITE"
        android:clickable="true"
        android:textColor="#6C93AB"
        android:layout_marginLeft="150dp"
        android:fontFamily="@font/nuevastdbold"
        android:textSize="17sp"
        android:textStyle="bold"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:orientation="horizontal">

        <Button

            android:background="@drawable/signin"
            android:id="@+id/SigninButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nuevastdbold"
            android:text="@string/SignInButton"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:textStyle="bold"




            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Message1"
        android:textColor="#6C93AB"
        android:fontFamily="@font/nuevastdbold"
        android:textSize="20sp"
        android:textStyle="bold"


        />


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Message2"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/nuevastdbold"
        android:textSize="25sp"
        android:textStyle="bold"


        />

    </LinearLayout>



</LinearLayout>


</ScrollView>